--- a/templates/update.html
+++ b/templates/update.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="mt-[80px] mx-auto md:w-[80%] lg:w-[80%]">
+    <div class="mt-[30%] md:mt-[80px] w-[90%] mx-auto md:w-[80%] lg:w-[80%]">
         <div>
             <div class="font-[700] text-[30px] text-[#134e4a]">Update Your Post</div>
             <div class="font-[400] text-[14px] leading-[17px] text-[#d6d3d1]">
@@ -25,13 +25,13 @@
             <div class="mt-[20px] font-[400] text-[14px] text-[#000]"><label for="title">Title</label></div>
             <div class="mt-[10px]">
                 <input type="text" name="title" id="title"
-                    class="w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px] py-[10px] px-[15px]">
+                    class="w-full md:w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px] py-[10px] px-[15px]">
             </div>
             <!--content-->
             <div class="mt-[20px] font-[400] text-[14px] text-[#000]"><label for="content">Content</label></div>
             <div class="mt-[10px]">
                 <textarea name="content" rows="6" id="content"
-                    class="w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px]">
+                    class="w-full md:w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px]">
                 </textarea>
             </div>
             <!--end content-->
