--- a/templates/createblog.html
+++ b/templates/createblog.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="mt-[80px] mx-auto md:w-[80%] lg:w-[80%]">
+    <div class="mt-[30%] md:mt-[80px] w-[90%] mx-auto md:w-[80%] lg:w-[80%]">
         <div>
             <div class="font-[700] text-[30px] text-[#134e4a]">Create A Post</div>
             <div class="font-[400] text-[14px] leading-[17px] text-[#d6d3d1]">
@@ -25,20 +25,20 @@
             <div class="mt-[20px] font-[400] text-[14px] text-[#000]"><label for="title">Title</label></div>
             <div class="mt-[10px]">
                 <input type="text" name="title" id="title" placeholder="Enter your blog title"
-                    class="w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px] py-[10px] px-[15px]">
+                    class="w-full md:w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px] py-[10px] px-[15px]">
             </div>
             <!--author-->
             <div class="mt-[20px] font-[400] text-[14px] text-[#000]"><label for="author">Author</label></div>
             <div class="mt-[10px]">
                 <input type="text" name="author" id="author" placeholder="Enter your username"
-                    class="w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px] py-[10px] px-[15px]">
+                    class="w-full md:w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px] py-[10px] px-[15px]">
             </div>
             <!--end author-->
             <!--content-->
             <div class="mt-[20px] font-[400] text-[14px] text-[#000]"><label for="content">Content</label></div>
             <div class="mt-[10px]">
                 <textarea name="content" rows="6" id="content" placeholder="Enter your blog content......."
-                    class="w-[50%] text-left px-[15px] border-[1px] border-[#d6d3d1] rounded-[5px]"></textarea>
+                    class="w-full md:w-[50%] text-left px-[15px] border-[1px] border-[#d6d3d1] rounded-[5px]"></textarea>
             </div>
             <!--end content-->
             <button type="submit"
