--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <header class="w-full fixed top-0 left-0 py-[20px] text-[#fff] bg-[#134e4a]">
-        <div class="flex justify-between items-center mx-auto md:w-[80%] lg:w-[80%]">
+        <div class="flex justify-between w-[90%] items-center mx-auto md:w-[80%] lg:w-[80%]">
             <div class="font-[700] text-[21px]">BlogDaily</div>
-            <div class="flex space-x-[20px] justify-between items-center">
+            <div class="md:flex hidden space-x-[20px] justify-between items-center">
                 <a href="{{ url_for('login') }}">
                     <div class="font-[500] cursor-pointer text-[16px]">Login</div>
                 </a>
@@ -27,11 +27,13 @@
                     </div>
                 </a>
             </div>
+            <!--mobile view drop-->
+            <!--end mobile view drop-->
         </div>
     </header>
     <!--end header-->
     <!--main content-->
-    <div class="mx-auto md:w-[80%] lg:w-[80%] mt-[130px]">
+    <div class="mx-auto w-[90%] md:w-[80%] lg:w-[80%] mt-[130px]">
         <div class="font-[600] text-[18px] text-[#115e59]"><span class="font-[700] text-[22px]">Hey, </span>you like
             what you are seeing ?
         </div>
@@ -49,12 +51,12 @@
         <!--post form db-->
         <!--user_posts-->
         <div class="mt-[60px] w-full py-[10px]">
-            <div class="font-[700] text-[#000] text-[35px]">All posts.</div>
+            <div class="font-[700] text-[#000] text-[25px] md:text-[35px]">All posts.</div>
             <!--post-->
             <div class="flex flex-row flex-wrap mt-[30px] items-center w-full">
                 {% for blog in blogs %}
                 <div
-                    class="bg-[#f9fafb] h-[130px] mt-[30px] ml-[10px] overflow-y-scroll p-[10px] shadow-lg w-[45%] rounded-[6px]">
+                    class="bg-[#f9fafb] h-[130px] mt-[30px] ml-[10px] overflow-y-scroll p-[10px] shadow-lg w-full md:w-[45%] rounded-[6px]">
                     <div class="font-[700] text-[15px] text-[#134e4a]">{{ blog.title }}</div>
                     <div class="font-[500] text-[15px] text-[#000] mt-[10px]">{{ blog.content }}</div>
                     <div class="font-[500] text-[15px] text-[#134e4a] mt-[5px]">Created at: {{ blog.date }} by {{
