feat: added flash messages and UI colors

--- a/templates/createblog.html
+++ b/templates/createblog.html
@@ -30,7 +30,7 @@
             <!--author-->
             <div class="mt-[20px] font-[400] text-[14px] text-[#000]"><label for="author">Author</label></div>
             <div class="mt-[10px]">
-                <input type="text" name="author" id="author" placeholder="Enter your username"
+                <input type="text" value="{{ user.name }}" name="author" id="author" placeholder="Enter your username"
                     class="w-full md:w-[50%] border-[1px] border-[#d6d3d1] rounded-[5px] py-[10px] px-[15px]">
             </div>
             <!--end author-->
