feat: added update

--- a/templates/about.html
+++ b/templates/about.html
@@ -37,6 +37,15 @@
             <!--end mobile view drop-->
         </div>
     </header>
+
+    <div class="mx-auto w-[90%] md:w-[80%] lg:w-[80%] mt-[130px]">
+        <div class="text-center font-[700] text-[23px]">ABOUT ME</div>
+        <div class="text-center mx-auto md:w-[40%] font-[700] text-[16px]">
+            My name is Fabowale Muh.Awwal, The Creator of BlogDaily.
+            I am a software engineer and a student at Altschool Africa.
+            Thanks for viewing.
+        </div>
+    </div>
 </body>
 <style>
     body {
@@ -55,4 +64,5 @@
         background: #000;
     }
 </style>
+
 </html>
