--- a/templates/login.html
+++ b/templates/login.html
@@ -55,14 +55,15 @@
             <!--email-->
             <div class="mt-[9px]"><label for="email" class="font-[500] text-[14px] text-[#000]">Email</label></div>
             <div>
-                <input autocomplete="no" type="text" name="email" id="email" placeholder="Enter your email address"
+                <input autocomplete="off" type="text" name="email" id="email" placeholder="Enter your email address"
                     class="w-full md:w-[50%] border-[1px] border-[#000] rounded-[5px] py-[10px] px-[15px] mt-[5px] focus:outline-none">
             </div>
             <!--password-->
             <div class="mt-[9px]"><label for="password" class="font-[500] text-[14px] text-[#000]">Password</label>
             </div>
             <div>
-                <input type="password" name="password" id="password" placeholder="Enter your password"
+                <input autocomplete="off" type="password" name="password" id="password"
+                    placeholder="Enter your password"
                     class="w-full md:w-[50%] border-[1px] border-[#000] rounded-[5px] py-[10px] px-[15px] mt-[5px] focus:outline-none">
             </div>
             <!--end form inputs-->
