--- a/templates/signup.html
+++ b/templates/signup.html
@@ -73,13 +73,13 @@
         <form action="{{ url_for('signup') }}" method="POST" class="mt-[15px]">
             <label for="name" class="font-[500] text-[14px] text-[#000]">Name</label>
             <div>
-                <input autocomplete="no" type="text" name="name" id="name" placeholder="Enter your username"
-                    class="w-full md:w-[50%] border-[1px] border-[#000] rounded-[5px] py-[10px] px-[15px] mt-[5px] focus:outline-none">
+                <input autocomplete="off" type="text" name="name" id="name" placeholder="Enter your username"
+                    class="w-full md:w-[50%] border-[1px] border-[#000] rounded-[5px] py-[10px] px-[15px] mt-[5px] focus:outline-offne">
             </div>
             <!--email-->
             <div class="mt-[9px]"><label for="email" class="font-[500] text-[14px] text-[#000]">Email</label></div>
             <div>
-                <input autocomplete="no" type="text" name="email" id="email" placeholder="Enter your email address"
+                <input autocomplete="off" type="text" name="email" id="email" placeholder="Enter your email address"
                     class="w-full md:w-[50%] border-[1px] border-[#000] rounded-[5px] py-[10px] px-[15px] mt-[5px] focus:outline-none">
             </div>
             <!--password-->
